2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.h:
	Document the restriction on PrepareAccess() failure, from discussion
	with benh.

2006-03-09  Jeremy C. Reed  <reed@reedmedia.net>

	* hw/xfree86/common/xf86Configure.c:
	Just like FreeBSD, let DragonFly's default mouse Device be
	/dev/sysmouse (since /dev/mouse don't even exist by default).

2006-03-09  Jeremy C. Reed  <reed@reedmedia.net>

	* hw/xfree86/os-support/bsd/bsd_mouse.c: (SupportedInterfaces),
	(DefaultProtocol), (SetSysMouseRes), (xf86OSMouseInit):
	Add DragonFly support. (It is like FreeBSD.) This patch is
	from DragonFly developer Joerg Sonnenberger and the pkgsrc
	collection.  (I tested using /dev/sysmouse with moused using
	serial /dev/cuaa0.)

2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaComposite):
	Coverity #349: Fall back to software early if pSrc->pDrawable is NULL,
	or pMask is non-NULL but pMask->pDrawable is NULL.  This prevents NULL
	dereferences on gradients and other Pictures which have no pDrawable.

2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c:
	* exa/exa.h:
	* exa/exa_offscreen.c:
	* exa/exa_priv.h:
	* hw/xfree86/doc/devel/exa-driver.txt:
	Do a first pass of doxygen documentation of EXA.  This removes the
	corresponding pieces of exa-driver.txt, which were becoming stale.
	Hopefully the documentation will stay much more up-to-date this way.
	Many thanks to jbarnes for writing exa-driver.txt which was used a lot
	in writing this documentation.

2006-03-09  Matthias Hopf  <mhopf@suse.de>

	* configure.ac: Do Xorg configure checks for Xgl only as well

2006-03-08  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaGetPixmapOffset), (exaPixmapIsOffscreen),
	(exaPrepareAccess), (exaFinishAccess), (exaDriverAlloc),
	(exaDriverInit), (exaMarkSync), (exaWaitSync):
	* exa/exa.h:
	* exa/exa_accel.c: (exaFillSpans), (exaCopyNtoNTwoDir),
	(exaCopyNtoN), (exaPolyFillRect), (exaSolidBoxClipped),
	(exaFillRegionSolid), (exaFillRegionTiled):