@@ -139,8 +139,10 @@ xf86parseKeyboardSection (void)
 			if (xf86getSubToken (&(ptr->inp_comment)) != NUMBER)
 				Error (AUTOREPEAT_MSG, NULL);
 			s1 = xf86uLongToString(val.num);
-			if (xf86getSubToken (&(ptr->inp_comment)) != NUMBER)
+			if (xf86getSubToken (&(ptr->inp_comment)) != NUMBER) {
+				xf86conffree(s1);
 				Error (AUTOREPEAT_MSG, NULL);
+			}
 			s2 = xf86uLongToString(val.num);
 			l = strlen(s1) + 1 + strlen(s2) + 1;
 			s = xf86confmalloc(l);
